force-app/main/default/objects/Bristar_Summary__c/Bristar_Summary__c.object-meta.xml
<CustomObject>
    <label>Bristar Summary</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Bristar Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bristar Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>