force-app/main/default/objects/Bristar_Summary__c/fields/area__c.field-meta.xml
<CustomField>
    <fullName>area__c</fullName>
    <label>area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>