force-app/main/default/objects/Bristar_Summary__c/fields/branch__c.field-meta.xml
<CustomField>
    <fullName>branch__c</fullName>
    <label>branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>