force-app/main/default/objects/Bristar_Summary__c/fields/branchDesc__c.field-meta.xml
<CustomField>
    <fullName>branchDesc__c</fullName>
    <label>branchDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>