force-app/main/default/objects/Bristar_Summary__c/fields/closedTicket__c.field-meta.xml
<CustomField>
    <fullName>closedTicket__c</fullName>
    <label>closedTicket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>