force-app/main/default/objects/Bristar_Summary__c/fields/costCenter__c.field-meta.xml
<CustomField>
    <fullName>costCenter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>costCenter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>