force-app/main/default/objects/Bristar_Summary__c/fields/costCenterDesc__c.field-meta.xml
<CustomField>
    <fullName>costCenterDesc__c</fullName>
    <label>costCenterDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>