force-app/main/default/objects/Bristar_Summary__c/fields/mainBranch__c.field-meta.xml
<CustomField>
    <fullName>mainBranch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>mainBranch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>