force-app/main/default/objects/Bristar_Summary__c/fields/mainBranchDesc__c.field-meta.xml
<CustomField>
    <fullName>mainBranchDesc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>mainBranchDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>