force-app/main/default/objects/Bristar_Summary__c/fields/onSla__c.field-meta.xml
<CustomField>
    <fullName>onSla__c</fullName>
    <label>onSla</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>