force-app/main/default/objects/Bristar_Summary__c/fields/onSlaClosed__c.field-meta.xml
<CustomField>
    <fullName>onSlaClosed__c</fullName>
    <label>onSlaClosed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>