force-app/main/default/objects/Bristar_Summary__c/fields/onSlaOpen__c.field-meta.xml
<CustomField>
    <fullName>onSlaOpen__c</fullName>
    <label>onSlaOpen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>