force-app/main/default/objects/Bristar_Summary__c/fields/openTicket__c.field-meta.xml
<CustomField>
    <fullName>openTicket__c</fullName>
    <label>openTicket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>