force-app/main/default/objects/Bristar_Summary__c/fields/overSla__c.field-meta.xml
<CustomField>
    <fullName>overSla__c</fullName>
    <label>overSla</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>