force-app/main/default/objects/Bristar_Summary__c/fields/overSlaClosed__c.field-meta.xml
<CustomField>
    <fullName>overSlaClosed__c</fullName>
    <label>overSlaClosed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>