force-app/main/default/objects/Bristar_Summary__c/fields/overSlaOpen__c.field-meta.xml
<CustomField>
    <fullName>overSlaOpen__c</fullName>
    <label>overSlaOpen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>