force-app/main/default/objects/Bristar_Summary__c/fields/regionDesc__c.field-meta.xml
<CustomField>
    <fullName>regionDesc__c</fullName>
    <label>regionDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>